@@ -76,7 +76,7 @@ def setupminaraad_folder_workflow(self, workflow):
 
     stateDef = workflow.states['restricted']
     stateDef.setProperties(title="""restricted""",
-                           transitions=['retract'])
+                           transitions=['retract', 'publish'])
     stateDef.setPermission('Access contents information',
                            0,
                            ['Owner', 'Author', 'Council Member', 'Reviewer', 'Manager'])
@@ -92,7 +92,7 @@ def setupminaraad_folder_workflow(self, workflow):
 
     stateDef = workflow.states['published']
     stateDef.setProperties(title="""published""",
-                           transitions=['retract'])
+                           transitions=['retract', 'restricted_publish'])
     stateDef.setPermission('Access contents information',
                            1,
                            ['Anonymous', 'Reviewer', 'Manager'])
